--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -75,6 +75,8 @@ source "drivers/sensor/dht/Kconfig"
 
 source "drivers/sensor/dps310/Kconfig"
 
+source "drivers/sensor/ds18b20/Kconfig"
+
 source "drivers/sensor/ens210/Kconfig"
 
 source "drivers/sensor/fxas21002/Kconfig"
